# painter

./: .env.example  Cargo.toml  Dockerfile  README.md
painter-js/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
painter-js/src/: canvas.js  challenge.js  constants.js  counter.js  main.js  socket.js  style.css  utils.js
src/: main.rs
