[package]
name = "painter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
bytes = "1.6.0"
chrono = "0.4.38"
dotenv = "0.15.0"
memory-stats = "1.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
socketioxide = "0.13.1"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tower_governor = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
